# breeze-rustle

./: .breezeignore  .env.example  .envrc  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.alpine  README.md  WARP.md  biome.json  build.rs  com.breeze-mcp.server.plist.template  com.github.casualjim.breeze.server.plist.template  config.local.toml  context.md  extra-ignores  install-launchd.py  justfile  openai-config-example.toml  package-lock.json  package.json  pyproject.toml  test_background_indexing.sh  test_bindings.py  test_metadata.py  test_new_features.py  test_ort_minimal.rs
.claude/: settings.local.json
.github/: copilot-instructions.md  copilot.instructions.md
.github/actions/setup-env/: action.yml
.github/workflows/: CI.yml  alpine-builder.yml  ci-cached.yml  grammars-cache.yml
.mise/tasks/: build  clean  lint
.mise/tasks/test/: _default
breeze-grammars/: Cargo.toml  build.rs  grammars.json
crates/breeze/: Cargo.toml
crates/breeze-chunkers/: Cargo.toml
crates/breeze-chunkers/src/: chunker.rs  dir.rs  grammar_loader.rs  languages.rs  lib.rs  metadata_extractor.rs  pathutil.rs  performance.rs  types.rs  walker.rs
crates/breeze-grammars/: Cargo.toml  README.md  build.rs  build_precompiled.rs  grammars-top50.json  grammars.json
crates/breeze-grammars/examples/: check_abi.rs  list_languages.rs  test_all_grammars.rs
crates/breeze-grammars/src/: lib.rs
crates/breeze-indexer/: Cargo.toml
crates/breeze-indexer/examples/: qwen3.rs
crates/breeze-indexer/src/: bulk_indexer.rs  config.rs  converter.rs  document_builder.rs  file_watcher.rs  indexer.rs  lib.rs  models.rs  pipeline.rs  project_manager.rs  rescan_worker.rs  search.rs  task_manager.rs
crates/breeze-indexer/src/aiproviders/voyage/: client.rs  error.rs  mod.rs  models.rs  types.rs
crates/breeze-indexer/src/embeddings/: batching.rs  error.rs  factory.rs  local.rs  mod.rs  openailike.rs  voyage.rs  voyage_test.rs
crates/breeze-indexer/src/embeddings/local/: bert.rs  model_info.rs  ort_bert.rs  ort_qwen3.rs  pooling.rs  text.rs  utils.rs
crates/breeze-indexer/src/models/: code_chunk.rs  code_document.rs  failed_embedding.rs  index_task.rs  project.rs
crates/breeze-indexer/src/reqwestx/: api_client.rs
crates/breeze-indexer/src/search/: chunk_tests.rs  chunks.rs  documents.rs
crates/breeze-indexer/src/sinks/: chunk_sink.rs  lancedb_sink.rs  mod.rs
crates/breeze-lancedb/: Cargo.toml
crates/breeze-napi/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package-lock.json  package.json
crates/breeze-napi/examples/: iterator-patterns.mjs
crates/breeze-napi/src/: chunking.rs  indexer.rs  lib.rs
crates/breeze-napi/test/: test-async-generators.js  test-async-generators.mjs  test-esm.mjs  test.js
crates/breeze-py/: Cargo.toml  pyproject.toml
crates/breeze-py/python/breeze/: __init__.pyi
crates/breeze-py/src/: lib.rs
crates/breeze-py/tests/: __init__.py  test_acceptance.py  test_all_languages_chunking.py  test_async_walker.py  test_hyperpolyglot_integration.py
crates/breeze-server/: Cargo.toml
crates/breeze-server/src/: app.rs  duration.rs  error.rs  lib.rs  main.rs  mcp.rs  routes.rs  server.rs  types.rs
crates/breeze/examples/: config_default.toml  config_example.toml  embed_directory.rs  voyage_embeddings.rs  voyage_indexing.rs
crates/breeze/src/: aggregator.rs  app.rs  batcher.rs  cli.rs  config.rs  converter.rs  document_builder.rs  format.rs  handlers.rs  indexer.rs  lib.rs  logging.rs  main.rs  mcp.rs  models.rs  pipeline.rs  search.rs  tables.rs  walker.rs
crates/breeze/src/aiproviders/: mod.rs
crates/breeze/src/aiproviders/voyage/: client.rs  error.rs  middleware.rs  mod.rs  models.rs  types.rs
crates/breeze/src/embeddings/: batching.rs  factory.rs  loader.rs  local.rs  mod.rs  models.rs  openailike.rs  sentence_transformer.rs  sentence_transformers.rs  tei.rs  voyage.rs
crates/breeze/src/embeddings/local/: ort_bert.rs
crates/breeze/src/sinks/: lancedb_sink.rs  mod.rs
crates/breeze/src/testing/: mock_aggregator.rs  mock_batcher.rs  mock_converter.rs  mock_document_builder.rs  mock_embedder.rs  mock_indexer.rs  mock_sink.rs  mod.rs
docs/: performance.md
docs/chunk-refactor/done/: 00-overview.md  01-replace-file-chunks.md  02-chunk-sink-add-then-prune.md  03-extend-delete-handler-chunks.md  04-stop-document-embeddings.md  05-search-chunk-only.md  06-cleanup-old-paths.md  07-test-plan.md  08-acceptance-checklist.md  README.md
docs/notes/: benchresults.md  code-splitter-analysis.md  future-scratch.md  grammar-integration-implementation.md  language-parser-api-inconsistencies.md  napi-async-iterator-research.md  syntastica-features-for-breeze-rustle.md  syntastica-integration-plan.md  syntastica-query-generation.md  syntastica-research.md  text-splitter-analysis.md
docs/plans/: advanced-search-implementation.md  background-indexing-tasks.md  breeze-rustle-implementation.md  embedding-providers-plan.md  embedding-retry-mechanism.md  embedding-system-implementation.md  implementation-gaps-analysis.md  project-deletion-plan.md  text-splitter-implementation-plan.md  tree-sitter-grammar-integration.md  work-avoidance.md
examples/: eof_chunks_example.js  eof_chunks_example.py  search_example.md
python/breeze_rustle/: __init__.pyi
src/: async_iter.rs  chunker.rs  chunker_tests.rs  languages.rs  lib.rs  metadata_extractor.rs  query_utils.rs  types.rs  walker.rs
tests/: test_acceptance.py  test_async_walker.py  test_hyperpolyglot_integration.py
tools/: analyze_performance.py  analyze_performance_polars.py  build-grammars  create-qwen3-runpod.sh  fetch-queries
tools/modal/: qwen3_vllm.py
