[package]
name = "breeze-rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "breeze_rustle"
crate-type = ["cdylib"]

[dependencies]
# Text splitting - the main crate we'll use
text-splitter = { version = "0.27", features = [
  "code",
  "tiktoken-rs",
  "tokenizers",
] }

# Tokenization
tokenizers = { version = "0.21", features = ["http"] }
tiktoken-rs = "0.7"

# Tree-sitter parsers (individual crates for all languages)
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
# tree-sitter-php = "0.23"  # PHP breaks everything
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"
tree-sitter-scala = "0.24"
tree-sitter-sql = "0.0.2"
tree-sitter-bash = "0.25"
tree-sitter-r = "1.2"

# Python bindings
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pyo3-log = "0.12.0"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "fs", "sync"] }

# Error handling
thiserror = "2.0"

# Utils
log = "0.4"
tree-sitter-language = "0.1.5"

# Project walker dependencies
ignore = "0.4"              # Gitignore-aware traversal
futures = "0.3"             # Async streams
hyperpolyglot = "0.1.7"     # Language detection
infer = "0.19.0"            # File type detection
tokio-stream = "0.1"        # Async streaming
async-stream = "0.3"        # Async stream macros

[dev-dependencies]
tree-sitter-rust = "0.24.0"
tempfile = "3.14"

[build-dependencies]
cc = "1.0"

[features]
performance-tests = []
