[package]
name = "breeze-chunkers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"        # Async stream macros

# Hashing
blake3 = "1.5"
breeze-grammars = { path = "../breeze-grammars" }

# Performance tracking
dashmap = "6.1"
futures = "0.3"             # Async streams
hyperpolyglot = "0.1.7"     # Language detection

# Project walker
ignore = "0.4"              # Gitignore-aware traversal
infer = "0.19.0"            # File type detection
text-splitter = { workspace = true }

# Error handling
thiserror = "2.0"
tiktoken-rs = { workspace = true }

# Tokenization
tokenizers = { workspace = true }

tokio = { version = "1", features = ["rt", "macros", "fs", "sync"] }
tokio-stream = "0.1"        # Async streaming

# Logging
tracing = { workspace = true }
# Tree-sitter parsers (individual crates for all languages)

tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[dev-dependencies]
tempfile = "3.11"          # Temporary file handling
