[package]
name = "breeze-chunkers"
version.workspace = true
edition.workspace = true

[features]
default = []
perfprofiling = []

[dependencies]
async-stream.workspace = true

blake3.workspace = true
breeze-grammars = { path = "../breeze-grammars" }

dashmap.workspace = true

flume.workspace = true
futures.workspace = true

hyperpolyglot = "0.1.7"

ignore = { version = "0.4", features = ["simd-accel"] }
infer = "0.19.0"
memchr = "2.7.5"

serde.workspace = true

text-splitter = { workspace = true }
thiserror.workspace = true
tiktoken-rs = { workspace = true }
tokenizers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-language.workspace = true

[dev-dependencies]
tempfile = "3"          # Temporary file handling
