[package]
name = "breeze-grammars"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.0"
tar = "0.4"
flate2 = "1.0"
which = "8.0"
num_cpus= "1"