[package]
name = "breeze-indexer"
version.workspace = true
edition.workspace = true

[features]
default = []
local-embeddings = ["ort"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "ort/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = [
    "dep:intel-mkl-src",
    "candle-nn/mkl",
    "candle-transformers/mkl",
    "candle-core/mkl",
]
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
metal = ["candle-core/metal", "candle-nn/metal", "ort/coreml"]
testing = []


[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "half"], optional = true }
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["half", "coreml"], optional = true }

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
# Core dependencies
anyhow.workspace = true

# Arrow dependencies
arrow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
blake3.workspace = true

# Internal dependencies
breeze-chunkers = { path = "../breeze-chunkers" }
bytes.workspace = true

candle-core = "0.9.1"
candle-flash-attn = { version = "0.9.1", optional = true }
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1" }
chrono.workspace = true
dashmap = { workspace = true, features = ["serde", "rayon"] }
flume.workspace = true
futures.workspace = true
futures-util.workspace = true
hex = "0.4"

# Additional dependencies for embeddings
hf-hub = { version = "0.4.2", features = ["rustls-tls", "tokio", "ureq"], default-features = false }
http = "1.2"
humantime = "2.1"
intel-mkl-src = { version = "0.8.1", optional = true }
lancedb.workspace = true
ndarray = "0.16.1"
notify = "8.0"
notify-debouncer-full = { version = "0.6", features = ["flume"]}
num_cpus.workspace = true

pin-project-lite.workspace = true
rand = "0.9"

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
small_ctor = "0.1.2"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.37.0"
tempfile = "3"
thiserror.workspace = true

# Tokenizer support
tiktoken-rs.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
typed-builder = "0.21"
uuid.workspace = true

[dev-dependencies]
toml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
