[package]
name = "breeze-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
breeze-chunkers = { path = "../breeze-chunkers" }
napi = { version = "=3.0.0-beta.8", features = ["full", "web_stream"] }
napi-derive = "=3.0.0-beta.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
flume = "0.11"
async-trait = "0.1.88"
pin-project-lite = "0.2"

[build-dependencies]
napi-build = "3.0.0-beta.0"
