[package]
name = "breeze-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.88"
breeze-chunkers = { path = "../breeze-chunkers" }
flume = "0.11"
futures = "0.3"
napi = { version = "=3.0.0-beta.8", features = ["full", "web_stream"] }
napi-derive = "=3.1.0"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"

[build-dependencies]
napi-build = "3.0.0-beta.0"
