[package]
name = "breeze-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
breeze-chunkers = { path = "../breeze-chunkers" }
breeze-indexer = { path = "../breeze-indexer" }
flume = { workspace = true }
futures = { workspace = true }
napi = { version = "3.2.4", features = ["full", "web_stream"] }
napi-derive = "3.2.4"
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
napi-build = "2.2.3"
