[package]
name = "breeze-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "breeze_python"
crate-type = ["cdylib"]

[dependencies]
breeze-chunkers = { path = "../breeze-chunkers" }
futures = "0.3"

# Python bindings
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pyo3-log = "0.12.0"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

