[package]
name = "breeze-server"
edition = "2024"
license.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]
aide = { version = "0.15", features = ["axum-json", "axum-query", "axum-matched-path", "axum-tokio", "axum-extra-query", "axum-extra-json-deserializer", "redoc", "scalar"] }
anyhow.workspace = true
async-compression = { version = "0.4", features = ["all-algorithms", "tokio"] }

axum = { version = "0.8.4", features = ["macros", "multipart", "ws", "http2"] }
axum-helmet = "0.2.0"
axum-otel-metrics = "0.12.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-tracing-opentelemetry = "0.29.0"
breeze-indexer = { path = "../breeze-indexer" }
chrono.workspace = true

futures.workspace = true

helmet-core = "0.2.0"
http.workspace = true
humantime = "2.2.0"
lancedb = { workspace = true }

listenfd = "1"

opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
  "reqwest-client",
  "reqwest-rustls",
  "http-proto",
  "tls",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }

pin-project-lite.workspace = true
prometheus = "0.14.0"

rmcp = { git = "https://github.com/casualjim/rust-sdk", branch = "update-schemars", features = ["transport-worker", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
rustls = "0.23.28"
rustls-acme = { version = "0.14.0", features = [
  "axum",
  "tls12",
  "tokio",
  "tower",
] }

rustls-pemfile = "2.2.0"
schemars = { version = "0.9", features = ["uuid1", "chrono04"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
tokio-util = { workspace = true }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = [
  "fs",
  "tracing",
  "trace",
  "cors",
  "compression-full",
] }
tower-layer = { version = "0.3.3" }
tower-sessions = { version = "0.14.0" }

tracing.workspace = true

url = { version = "2", features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
axum-test = "17"
